...
}

class MyHomePageState extends State<MyHomePage> {
  //si no hiciese falta lo de arriba, esta linea quedaria
//class MyHomePage extends StatelessWidget
  List<String> opciones = [
    'EUR',
    'USD',
    'JPY',
    'DKK',
    'GBP',
    'SEK',
    'CHF',
    'NOK',
    'RUB',
    'TRY',
    'AUD',
    'BRL',
    'CAD',
    'CNY',
    'INR',
    'MXN',
    'ZAR'
  ];
...
                      mainAxisSize: MainAxisSize.min,
                      children: [
                        Expanded(
                          child: Padding(
                            padding: const EdgeInsets.all(8.0),
                            child: TextField(
                              key: Key('entrada_texto'),
                              style: TextStyle(fontSize: 16),
                              decoration: InputDecoration(
                                counterText: '',
                                border: OutlineInputBorder(
                                  borderRadius: BorderRadius
                                      .zero, // Esto hace que las esquinas no estén curvadas
...
                                appState.introducirValor(text);
                              },
                            ),
                          ),
                        ),
                        DropdownButton<String>(
                          key: Key('desplegable_entrada'),
                          value: appState.monedaActual,
                          items: opciones.map((String opcion) {
                            return DropdownMenuItem<String>(
                              value: opcion,
                              child: Text(opcion),
                            );
...
                      ],
                    ),
                    SizedBox(
                      height: 25,
                    ),
                    ElevatedButton(
                      key: Key('boton_convertir'),
                      onPressed: () {
                        String stringAux = '';
                        for (int i = 0; i < appState.cantidadSalidas; i++) {
                          stringAux = stringAux;
                          if (i != 0) {
                            stringAux = stringAux + ', ';
...
                                    style: TextStyle(fontSize: 24),
                                  ),
                                  SizedBox(
                                    width: 20,
                                  ),
                                  DropdownButton<String>(
                                    key: Key('desplegable_salida_0'),
                                    value: appState.monedaSalida[0],
                                    items: opciones.map((String opcion) {
                                      return DropdownMenuItem<String>(
                                        value: opcion,
                                        child: Text(opcion),
                                      );
...
                                    style: TextStyle(fontSize: 24),
                                  ),
                                  SizedBox(
                                    width: 20,
                                  ),
                                  DropdownButton<String>(
                                    key: Key('desplegable_salida_1'),
                                    value: appState.monedaSalida[1],
                                    items: opciones.map((String opcion) {
                                      return DropdownMenuItem<String>(
                                        value: opcion,
                                        child: Text(opcion),
                                      );
...
                                    style: TextStyle(fontSize: 24),
                                  ),
                                  SizedBox(
                                    width: 20,
                                  ),
                                  DropdownButton<String>(
                                    key: Key('desplegable_salida_2'),
                                    value: appState.monedaSalida[2],
                                    items: opciones.map((String opcion) {
                                      return DropdownMenuItem<String>(
                                        value: opcion,
                                        child: Text(opcion),
                                      );
...
                        decoration: BoxDecoration(
                          shape: BoxShape.rectangle,
                          borderRadius: BorderRadius.circular(10.0),
                          color: Theme.of(context).primaryColor,
                        ),
                        child: IconButton(
                            key: Key('boton_añadir'),
                            iconSize: 50,
                            icon: Icon(Icons.add),
                            color: Colors.white,
                            onPressed: () {
                              appState.anadirSalida();
                            }),
...
                        decoration: BoxDecoration(
                          shape: BoxShape.rectangle,
                          borderRadius: BorderRadius.circular(10.0),
                          color: Theme.of(context).primaryColor,
                        ),
                        child: IconButton(
                            key: Key('boton_quitar'),
                            iconSize: 50,
                            icon: Icon(Icons.remove),
                            color: Colors.white,
                            onPressed: () {
                              appState.quitarSalida();
                            }),
...
